node/tests/k8st/infra/calicoctl.yaml
# Calico Version master
# https://docs.projectcalico.org/master/releases#master
# This manifest includes the following component versions:
#   calico/ctl:master

apiVersion: v1
kind: ServiceAccount
metadata:
  name: calicoctl
  namespace: kube-system

---
apiVersion: v1
kind: Pod
metadata:
  name: calicoctl
  namespace: kube-system
spec:
  tolerations:
    # Important: Tolerate the control plane node, where we will run calicoctl.
    - operator: "Exists"
      effect: "NoSchedule"
  nodeSelector:
    # Important: This makes sure that calicoctl is installed on the control plane node,
    # where it will not be subjected to potentially disruptive actions taken by our test code.
    kubernetes.io/hostname: kind-control-plane
  hostNetwork: true
  serviceAccountName: calicoctl
  containers:
    - name: calicoctl
      image: tigera/calicoctl:test-build
      imagePullPolicy: Never
      command:
        - calicoctl
      args:
        - --allow-version-mismatch
        - version
        - --poll=1m
      env:
        - name: DATASTORE_TYPE
          value: kubernetes

---
kind: ClusterRole
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: calicoctl
rules:
  - apiGroups: [""]
    resources:
      - namespaces
      - nodes
    verbs:
      - get
      - list
      - update
  - apiGroups: [""]
    resources:
      - nodes/status
    verbs:
      - update
  - apiGroups: [""]
    resources:
      - pods
      - serviceaccounts
    verbs:
      - get
      - list
  - apiGroups: [""]
    resources:
      - pods/status
    verbs:
      - update
  - apiGroups: ["crd.projectcalico.org"]
    resources:
      - bgppeers
      - bgpfilters
      - bgpconfigurations
      - clusterinformations
      - felixconfigurations
      - globalnetworkpolicies
      - globalnetworksets
      - ippools
      - networkpolicies
      - networksets
      - hostendpoints
      - ipamblocks
      - blockaffinities
      - ipamhandles
      - tiers
      - licensekeys
      - externalnetworks
      - egressgatewaypolicies
    verbs:
      - create
      - get
      - list
      - update
      - delete
  - apiGroups: ["networking.k8s.io"]
    resources:
      - networkpolicies
    verbs:
      - get
      - list

---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: calicoctl
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: calicoctl
subjects:
  - kind: ServiceAccount
    name: calicoctl
    namespace: kube-system
