node/tests/k8st/infra/enterprise_versions.yml
# Components defined here are required to be kept in sync with hack/gen-versions/enterprise.go.tpl
title: test-build
components:
  libcalico-go:
    version: test-build
  cnx-manager:
    image: tigera/cnx-manager
    version: test-build
  voltron:
    image: tigera/voltron
    version: test-build
  cnx-apiserver:
    image: tigera/cnx-apiserver
    version: test-build
  cnx-queryserver:
    image: tigera/cnx-queryserver
    version: test-build
  cnx-kube-controllers:
    image: tigera/kube-controllers
    version: test-build
  typha:
    image: tigera/typha
    version: test-build
  cnx-node:
    image: library/cnx-node
    version: test-build
  cnx-node-windows:
    image: tigera/cnx-node-windows
    version: test-build
  fluentd:
    image: tigera/fluentd
    version: test-build
  fluentd-windows:
    image: tigera/fluentd-windows
    version: test-build
  ui-apis:
    image: tigera/ui-apis
    version: test-build
  linseed:
    image: tigera/linseed
    version: test-build
  es-gateway:
    image: tigera/es-gateway
    version: test-build
  dex:
    image: tigera/dex
    version: test-build
  eck-kibana:
    version: 8.17.1
  kibana:
    image: tigera/kibana
    version: test-build
  eck-elasticsearch:
    version: 8.17.1
  elasticsearch:
    image: tigera/elasticsearch
    version: test-build
  elastic-tsee-installer:
    image: tigera/intrusion-detection-job-installer
    version: test-build
  es-curator:
    image: tigera/es-curator
    version: test-build
  intrusion-detection-controller:
    image: tigera/intrusion-detection-controller
    version: test-build
  waf-http-filter:
    image: tigera/waf-http-filter
    version: test-build
  webhooks-processor:
    image: tigera/webhooks-processor
    version: test-build
  compliance-controller:
    image: tigera/compliance-controller
    version: test-build
  compliance-reporter:
    image: tigera/compliance-reporter
    version: test-build
  compliance-snapshotter:
    image: tigera/compliance-snapshotter
    version: test-build
  compliance-server:
    image: tigera/compliance-server
    version: test-build
  compliance-benchmarker:
    image: tigera/compliance-benchmarker
    version: test-build
  guardian:
    image: tigera/guardian
    version: test-build
  tigera-cni:
    image: tigera/cni
    version: test-build
  tigera-cni-windows:
    image: tigera/cni-windows
    version: test-build
  elasticsearch-metrics:
    image: tigera/elasticsearch-metrics
    version: test-build
  packetcapture:
    image: tigera/packetcapture
    version: test-build
  policy-recommendation:
    image: tigera/policy-recommendation
    version: test-build
  # coreos-prometheus holds the version of prometheus built for tigera/prometheus,
  # which prometheus operator uses to validate.
  coreos-prometheus:
    version: v2.54.1
  prometheus:
    image: tigera/prometheus
    version: test-build
  # coreos-prometheus holds the version of alertmanager built for tigera/alertmanager,
  # which prometheus operator uses to validate.
  coreos-alertmanager:
    version: v0.28.0
  alertmanager:
    image: tigera/alertmanager
    version: test-build
  tigera-prometheus-service:
    image: tigera/prometheus-service
    version: test-build
  deep-packet-inspection:
    image: tigera/deep-packet-inspection
    version: test-build
  flexvol:
    image: tigera/pod2daemon-flexvol
    version: test-build
  csi:
    image: tigera/csi
    version: test-build
  csi-node-driver-registrar:
    image: tigera/node-driver-registrar
    version: test-build
  # The components below are third-party images that have been retagged under
  # quay.io/tigera so all enterprise images come from the same repository and org.
  elasticsearch-operator:
    image: tigera/eck-operator
    version: test-build
  eck-elasticsearch-operator:
    version: 2.16.0
  l7-collector:
    image: tigera/l7-collector
    version: test-build
  envoy:
    image: tigera/envoy
    version: test-build
  dikastes:
    image: tigera/dikastes
    version: test-build
  l7-admission-controller:
    image: tigera/l7-admission-controller
    version: test-build
  egress-gateway:
    image: tigera/egress-gateway
    version: test-build
  key-cert-provisioner:
    image: tigera/key-cert-provisioner
    version: test-build
  gateway-api-envoy-gateway:
    image: tigera/envoy-gateway
    version: test-build
  gateway-api-envoy-proxy:
    image: tigera/envoy-proxy
    version: test-build
  gateway-api-envoy-ratelimit:
    image: tigera/envoy-ratelimit
    version: test-build
