node/tests/k8st/infra/values-v3-crds.yaml
# This file contains a values.yaml configuration for installing Calico backed by
# the API server instead of using projectcalico.org/v3 CRDs.
installation:
  enabled: true
  variant: TigeraSecureEnterprise
  registry: docker.io

  # Disable HA control plane.
  controlPlaneReplicas: 1

  # TODO: EGW tests use flex volume. Migrate to CSI.
  kubeletVolumePluginPath: "None"
  flexVolumePath: "/usr/libexec/kubernetes/kubelet-plugins/volume/exec/"

  # Configure CIDRs to match kubeadm cluster.
  calicoNetwork:
    ipPools:
    - cidr: 192.168.0.0/16
    - cidr: fd00:10:244::/64

apiServer:
  enabled: false

goldmane:
  # Goldmane is not supported in enterprise.
  enabled: false

whisker:
  # Whisker is not supported in enterprise.
  enabled: false

# Disable enterprise components not needed for tests.
tigera-prometheus-operator:
  enabled: true
  prometheusOperator:
    image: tigera/prometheus-operator
    tag: test-build
    registry: docker.io
  prometheusConfigReloader:
    image: tigera/prometheus-config-reloader
    tag: test-build
    registry: docker.io
intrusionDetection:
  enabled: true
logCollector:
  enabled: true
logStorage:
  enabled: true
manager:
  enabled: true
monitor:
  enabled: true
policyRecommendation:
  enabled: true

# CRDs are installed by `make kind-cluster-create` in lib.Makefile ($(KUBECTL) create -f $(REPO_ROOT)/libcalico-go/config/crd;)
manageCRDs: false

# Configuration for the tigera operator
tigeraOperator:
  image: tigera/operator
  version: test-build
  registry: docker.io
