node/tests/k8st/infra/values.yaml
installation:
  enabled: true
  variant: TigeraSecureEnterprise
  registry: docker.io
  controlPlaneReplicas: 1
  calicoNetwork:
    ipPools:
    - cidr: 192.168.0.0/16
    - cidr: fd00:10:244::/64
  registry: docker.io

  # Disable HA control plane.
  controlPlaneReplicas: 1

  # TODO: EGW tests use flex volume. Migrate to CSI.
  flexVolumePath: "/usr/libexec/kubernetes/kubelet-plugins/volume/exec/"
  kubeletVolumePluginPath: "None"

  # Configure CIDRs to match kubeadm cluster.
  calicoNetwork:
    ipPools:
    - cidr: 192.168.0.0/16
    - cidr: fd00:10:244::/64

apiServer:
  enabled: true
  apiServerDeployment:
    spec:
      template:
        spec:
          # Run apiserver on control-plane node so connectivity with k8s apiserver is not
          # impacted by tests that disable / re-enable networking.
          nodeSelector:
            kubernetes.io/hostname: kind-control-plane

goldmane:
  enabled: false

whisker:
  enabled: false

# Disable enterprise components not needed for tests.
tigera-prometheus-operator:
  enabled: false
intrusionDetection:
  enabled: false
logCollector:
  enabled: false
logStorage:
  enabled: false
manager:
  enabled: false
monitor:
  enabled: false
policyRecommendation:
  enabled: false

# Configuration for the tigera operator
tigeraOperator:
  image: tigera/operator
  version: test-build
  registry: docker.io
